--- a/public/admin.html
+++ b/public/admin.html
@@ -78,6 +78,7 @@
       .table-wrap {
         overflow: auto;
       }
+      .card-footer { padding: 12px 22px 18px 22px; border-top: 1px solid var(--border); text-align: center; color: var(--muted); font-size: 13px; }
       table {
         width: 100%;
         border-collapse: collapse;
@@ -246,6 +247,7 @@
             </thead>
             <tbody></tbody>
           </table>
+          <div class="card-footer">Calypso Bay Reservations Dashboard</div>
         </div>
       </div>
     </div>
@@ -464,7 +466,15 @@
       })()
     </script>
   </body>
-  <footer style="text-align:center; color:#9aa0a6; padding: 12px 0 24px; font: 13px system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, 'Apple Color Emoji','Segoe UI Emoji';">
+  <footer
+    style="
+      text-align: center;
+      color: #9aa0a6;
+      padding: 12px 0 24px;
+      font: 13px system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell,
+        Noto Sans, Helvetica, Arial, 'Apple Color Emoji', 'Segoe UI Emoji';
+    "
+  >
     Calypso Bay Reservations Dashboard
   </footer>
 </html>
